--- a/Date-Control-Application/src/app/home/home.page.html
+++ b/Date-Control-Application/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Ionic 4 Form
+      A.Fahey's Date Control Application
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -10,10 +10,10 @@
   <ion-grid>
     <ion-row>
       <ion-col class="ion-align-self-center">
-        <ion-button [routerLink]="['/registration']" expand="block" color="primary">Register</ion-button>
+        <span class="already">Welcome, Please Sign In or Register as New Staff Member</span>
+        <ion-button [routerLink]="['/login']" expand="block" color="danger">Staff Sign In</ion-button>
         <span class="divider line one-line">or</span>
-        <span class="already">Already a user?</span>
-        <ion-button [routerLink]="['/login']" expand="block" color="danger">Sign In</ion-button>
+        <ion-button [routerLink]="['/registration']" expand="block" color="primary">Register As New Staff Member</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
