--- a/Date-Control-Application/src/app/login/login.page.html
+++ b/Date-Control-Application/src/app/login/login.page.html
@@ -25,17 +25,9 @@
       </ion-col>
     </ion-row>
 
-    <span class="divider line one-line">or</span>
-
     <ion-row>
       <ion-col> 
-        <ion-button 
-         type="submit" 
-         color="danger"
-         (click)="authService.GoogleAuth()" 
-         expand="block">
-           Login with Google
-        </ion-button>
+        <ion-button [routerLink]="['/forgot-password']" expand="block" color="danger">Forgot Password ?</ion-button>
       </ion-col>
     </ion-row>
 
