--- a/Date-Control-Application/src/app/registration/registration.page.html
+++ b/Date-Control-Application/src/app/registration/registration.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>Register User</ion-title>
+    <ion-title>Register As New Staff Member</ion-title>
   </ion-toolbar>
 </ion-header>
 
