got forgot-password doing something but not working

--- a/Date-Control-Application/src/app/forgot-password/forgot-password.page.html
+++ b/Date-Control-Application/src/app/forgot-password/forgot-password.page.html
@@ -16,13 +16,13 @@
 
     <ion-row>
       <ion-col>
-        <ion-button (click)="sendPasswordResetEmail(user.email)">Reset Password</ion-button>
+        <ion-button type="submit" (click)="sendPasswordResetEmail(user.email)" expand="block">Register</ion-button>
       </ion-col>
     </ion-row>
 
     <small>
-      Please provide the email address that you used when you signed
-      up for your staff account.
+      Please provide the username or email address that you used when you signed
+      up for your Evernote account.
     </small>
   </form>
 </ion-content>
