headers changed, button added to dashboard

--- a/Date-Control-Application/src/app/dashboard/dashboard.page.html
+++ b/Date-Control-Application/src/app/dashboard/dashboard.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
       <ion-buttons slot="start">
       </ion-buttons>
-    <ion-title>dashboard</ion-title>
+    <ion-title>AF Date Control - Dashboard</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -10,6 +10,12 @@
   <ion-grid>
     <ion-row>
       <h2>Hello, User</h2>
+    </ion-row>
+
+    <ion-row>
+      <ion-col> 
+        <ion-button [routerLink]="['/biscuits-cakes']" expand="block" color="danger">Forgot Password ?</ion-button>
+      </ion-col>
     </ion-row>
     
     <ion-row>
