--- a/Date-Control-Application/src/app/home/home.page.html
+++ b/Date-Control-Application/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      A.Fahey's Date Control Application
+      AF Date Control
     </ion-title>
   </ion-toolbar>
 </ion-header>
