--- a/Date-Control-Application/src/app/login/login.page.html
+++ b/Date-Control-Application/src/app/login/login.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>Sign in User</ion-title>
+    <ion-title>AF Date Control - Staff Login</ion-title>
   </ion-toolbar>
 </ion-header>
 
