small tweaks to biscuit-cakes button

--- a/Date-Control-Application/src/app/dashboard/dashboard.page.html
+++ b/Date-Control-Application/src/app/dashboard/dashboard.page.html
@@ -14,7 +14,7 @@
 
     <ion-row>
       <ion-col> 
-        <ion-button [routerLink]="['/biscuits-cakes']" expand="block" color="danger">Forgot Password ?</ion-button>
+        <ion-button [routerLink]="['/biscuits-cakes']" expand="block" color="danger" size="large">Biscuits and Cakes</ion-button>
       </ion-col>
     </ion-row>
     
