for now color coding the food category pages of most common out of date stuff

--- a/Date-Control-Application/src/app/dashboard/dashboard.page.html
+++ b/Date-Control-Application/src/app/dashboard/dashboard.page.html
@@ -14,7 +14,13 @@
 
     <ion-row>
       <ion-col> 
-        <ion-button [routerLink]="['/biscuits-cakes']" expand="block" color="danger" size="large">Biscuits and Cakes</ion-button>
+        <ion-button [routerLink]="['/biscuits-cakes']" expand="block" color="warning" size="large">Biscuits and Cakes</ion-button>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col> 
+        <ion-button [routerLink]="['/cereal-muesli']" expand="block" color="success" size="large">Cereal/Muesli</ion-button>
       </ion-col>
     </ion-row>
     
