more food group buttons!

--- a/Date-Control-Application/src/app/dashboard/dashboard.page.html
+++ b/Date-Control-Application/src/app/dashboard/dashboard.page.html
@@ -23,6 +23,24 @@
         <ion-button [routerLink]="['/cereal-muesli']" expand="block" color="success" size="large">Cereal/Muesli</ion-button>
       </ion-col>
     </ion-row>
+
+    <ion-row>
+      <ion-col> 
+        <ion-button [routerLink]="['/confectionery-crisps']" expand="block" color="warning" size="large">Confectionery and Crisps</ion-button>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col> 
+        <ion-button [routerLink]="['/dairy']" expand="block" color="danger" size="large">Dairy Products</ion-button>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col> 
+        <ion-button [routerLink]="['/deli-stock']" expand="block" color="danger" size="large">Deli Stock</ion-button>
+      </ion-col>
+    </ion-row>
     
     <ion-row>
       <ion-button type="submit" (click)="authService.SignOut()" expand="block">Logout</ion-button>
