small design tweaks

--- a/Date-Control-Application/src/app/home/home.page.html
+++ b/Date-Control-Application/src/app/home/home.page.html
@@ -11,9 +11,9 @@
     <ion-row>
       <ion-col class="ion-align-self-center">
         <span class="already">Welcome, Please Sign In or Register as New Staff Member</span>
-        <ion-button [routerLink]="['/login']" expand="block" color="danger">Staff Sign In</ion-button>
+        <ion-button [routerLink]="['/login']" expand="block" color="tertiary">Staff Sign In</ion-button>
         <span class="divider line one-line">or</span>
-        <ion-button [routerLink]="['/registration']" expand="block" color="primary">Register As New Staff Member</ion-button>
+        <ion-button [routerLink]="['/registration']" expand="block" color="dark">Register As New Staff Member</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
