all dashboard food group buttons added, ready for crud functions

--- a/Date-Control-Application/src/app/dashboard/dashboard.page.html
+++ b/Date-Control-Application/src/app/dashboard/dashboard.page.html
@@ -41,6 +41,36 @@
         <ion-button [routerLink]="['/deli-stock']" expand="block" color="danger" size="large">Deli Stock</ion-button>
       </ion-col>
     </ion-row>
+
+    <ion-row>
+      <ion-col> 
+        <ion-button [routerLink]="['/frozen']" expand="block" color="success" size="large">Frozen Foods</ion-button>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col> 
+        <ion-button [routerLink]="['/meats']" expand="block" color="danger" size="large">Meats</ion-button>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col> 
+        <ion-button [routerLink]="['/medicines']" expand="block" color="warning" size="large">Medicines</ion-button>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col> 
+        <ion-button [routerLink]="['/minerals']" expand="block" color="warning" size="large">Minerals</ion-button>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col> 
+        <ion-button [routerLink]="['/misc-other']" expand="block" color="medium" size="large">Misc/Other</ion-button>
+      </ion-col>
+    </ion-row>
     
     <ion-row>
       <ion-button type="submit" (click)="authService.SignOut()" expand="block" color="dark">Logout</ion-button>
