added company logo to home page

--- a/Date-Control-Application/src/app/home/home.page.html
+++ b/Date-Control-Application/src/app/home/home.page.html
@@ -1,8 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
-      AF Date Control
-    </ion-title>
+    <ion-img src="..\assets\icon\AF-Date-Control.png"></ion-img>
   </ion-toolbar>
 </ion-header>
 
