--- a/Date-Control-Application/src/app/home/home.page.scss
+++ b/Date-Control-Application/src/app/home/home.page.scss
@@ -38,3 +38,10 @@
     text-align: center;
     padding-bottom: 10px;
 }
+
+ion-img{
+    width: 10%;
+    height: 10%;
+    margin: auto;
+    display: block;
+}
