--- a/Date-Control-Application/src/app/login/login.page.html
+++ b/Date-Control-Application/src/app/login/login.page.html
@@ -3,6 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
+    <ion-img src="..\assets\icon\AF-Date-Control.png"></ion-img>
   </ion-toolbar>
 </ion-header>
 
