added company logo to registration page, with ion-back-button

--- a/Date-Control-Application/src/app/registration/registration.page.html
+++ b/Date-Control-Application/src/app/registration/registration.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>Register As New Staff Member</ion-title>
+    <ion-img src="..\assets\icon\AF-Date-Control.png"></ion-img>
   </ion-toolbar>
 </ion-header>
 
