--- a/Date-Control-Application/src/app/verify-email/verify-email.page.html
+++ b/Date-Control-Application/src/app/verify-email/verify-email.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>AF Date Control - Verify Email</ion-title>
+    <ion-img src="..\assets\icon\AF-Date-Control.png"></ion-img>
   </ion-toolbar>
 </ion-header>
 
