added company logo to dashboard

--- a/Date-Control-Application/src/app/dashboard/dashboard.page.html
+++ b/Date-Control-Application/src/app/dashboard/dashboard.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
       <ion-buttons slot="start">
       </ion-buttons>
-    <ion-title>AF Date Control - Dashboard</ion-title>
+      <ion-img src="..\assets\icon\AF-Date-Control.png"></ion-img>
   </ion-toolbar>
 </ion-header>
 
