logo added to forgot password page, need to come back to fix this pages function

--- a/Date-Control-Application/src/app/forgot-password/forgot-password.page.scss
+++ b/Date-Control-Application/src/app/forgot-password/forgot-password.page.scss
@@ -2,3 +2,10 @@ small {
     display: block;
     padding: 15px;
 }
+
+ion-img{
+    width: 10%;
+    height: 10%;
+    margin: auto;
+    display: block;
+}
