--- a/Date-Control-Application/src/app/forgot-password/forgot-password.page.html
+++ b/Date-Control-Application/src/app/forgot-password/forgot-password.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>Reset Your Password</ion-title>
+    <ion-img src="..\assets\icon\AF-Date-Control.png"></ion-img>
   </ion-toolbar>
 </ion-header>
 
