--- a/Date-Control-Application/src/app/update-pages/update-bc/update-bc.page.html
+++ b/Date-Control-Application/src/app/update-pages/update-bc/update-bc.page.html
@@ -1,9 +1,44 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>update-bc</ion-title>
+    <ion-title>
+      Update Product Details
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <ion-list lines="full">
+    <form [formGroup]="updateBcForm" (ngSubmit)="updateForm()">
 
+      <ion-item>
+        <ion-label position="floating">Brand</ion-label>
+        <ion-input formControlName="brand" type="text" required></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label position="floating">Description</ion-label>
+        <ion-input formControlName="description" type="text" required>
+        </ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label position="floating">Quantity</ion-label>
+        <ion-input formControlName="quantity" type="number" required>
+        </ion-input>
+      </ion-item>
+
+      <ion-row>
+        <ion-col>
+          <ion-button type="submit" color="success" shape="full" expand="block">Update</ion-button>
+        </ion-col>
+      </ion-row>
+    </form>
+
+    <ion-row>
+      <ion-col>
+        <ion-button [routerLink]="['/biscuits-cakes']" expand="block" color="dark">Go Back</ion-button>
+      </ion-col>
+    </ion-row>
+    
+  </ion-list>
 </ion-content>
