delete function working, update not

--- a/Date-Control-Application/src/app/biscuits-cakes/biscuits-cakes.page.html
+++ b/Date-Control-Application/src/app/biscuits-cakes/biscuits-cakes.page.html
@@ -55,9 +55,15 @@
   </ion-label>
 
   <div class="item-note" item-end>
+
+    <button ion-button clear [routerLink]="['/update-bc/', bc.$key]">
+      <ion-icon name="create" style="zoom:2.0"></ion-icon>
+    </button>
     <button ion-button clear (click)="deleteBcProduct(bc.$key)">
       <ion-icon name="trash" style="zoom:2.0"></ion-icon>
     </button>
   </div>
 
 </ion-item>
+
+src\app\update-pages\update-bc\update-bc
