will comeback to update function

--- a/Date-Control-Application/src/app/biscuits-cakes/biscuits-cakes.page.html
+++ b/Date-Control-Application/src/app/biscuits-cakes/biscuits-cakes.page.html
@@ -56,7 +56,7 @@
 
   <div class="item-note" item-end>
 
-    <button ion-button clear [routerLink]="['/update-bc/', bc.$key]">
+    <button ion-button clear [routerLink]="['/update-pages/update-bc/', bc.$key]">
       <ion-icon name="create" style="zoom:2.0"></ion-icon>
     </button>
     <button ion-button clear (click)="deleteBcProduct(bc.$key)">
@@ -65,5 +65,3 @@
   </div>
 
 </ion-item>
-
-src\app\update-pages\update-bc\update-bc
