--- a/Date-Control-Application/src/app/update-pages/update-bc/update-bc.page.html
+++ b/Date-Control-Application/src/app/update-pages/update-bc/update-bc.page.html
@@ -22,8 +22,20 @@
       </ion-item>
 
       <ion-item>
-        <ion-label position="floating">Quantity</ion-label>
+        <ion-label position="floating">Barcode</ion-label>
+        <ion-input formControlName="barcode" type="number" required>
+        </ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label position="floating">Ouantity</ion-label>
         <ion-input formControlName="quantity" type="number" required>
+        </ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label position="floating">Best Before Date</ion-label>
+        <ion-input formControlName="bbdate" type="text" required>
         </ion-input>
       </ion-item>
 
