Date Format added to bbdate value

--- a/Date-Control-Application/src/app/biscuits-cakes/biscuits-cakes.page.html
+++ b/Date-Control-Application/src/app/biscuits-cakes/biscuits-cakes.page.html
@@ -33,7 +33,7 @@
 
       <ion-item>
         <ion-label position="floating">Best Before Date</ion-label>
-        <ion-input formControlName="bbdate" type="text" required>
+        <ion-input formControlName="bbdate" type="Date" required>
         </ion-input>
       </ion-item>
 
