--- a/Date-Control-Application/src/app/biscuits-cakes/biscuits-cakes.page.html
+++ b/Date-Control-Application/src/app/biscuits-cakes/biscuits-cakes.page.html
@@ -1,67 +1,59 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Biscuits and Cakes</ion-title>
+    <ion-row>
+      <ion-button [routerLink]="['/dashboard']" expand="block" color="dark">Go Back</ion-button>
+      <ion-img src="..\assets\icon\AF-Date-Control.png"></ion-img>
+    </ion-row>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
   <ion-list lines="full">
+    <h1>Enter Product Details From Biscuit and Cakes Sections:</h1>
     <form [formGroup]="bcForm" (ngSubmit)="formSubmit()">
       <ion-item>
-        <ion-label position="floating">Brand</ion-label>
-        <ion-input formControlName="brand" type="text" required></ion-input>
+        <ion-input formControlName="brand" type="text" placeholder="Enter Brand Name:" required></ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-label position="floating">Description</ion-label>
-        <ion-input formControlName="description" type="text" required>
+        <ion-input formControlName="description" type="text" placeholder="Enter Product Description:" required>
         </ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-label position="floating">Barcode</ion-label>
-        <ion-input formControlName="barcode" type="number" required>
+        <ion-input formControlName="barcode" type="number" placeholder="Enter Barcode:"required>
         </ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-label position="floating">Ouantity</ion-label>
-        <ion-input formControlName="quantity" type="number" required>
+        <ion-input formControlName="quantity" type="number" placeholder="Enter Quantity:" required>
         </ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-label position="floating">Best Before Date</ion-label>
+        <p>Enter Best Before Date:</p>
         <ion-input formControlName="bbdate" type="Date" required>
         </ion-input>
       </ion-item>
 
       <ion-row>
-        <ion-col>
-          <ion-button type="submit" color="primary" shape="full" expand="block">Add Product</ion-button>
-        </ion-col>
+          <ion-button type="submit" color="success" shape="full" expand="block">Add Product</ion-button>
       </ion-row>
     </form>
   </ion-list>
 
-</ion-content>
-
-<ion-item *ngFor="let bc of Listings" class="user-list">
-  <ion-label>
-    <h3>Product : {{bc.brand}} {{bc.description}}</h3>
-    <h3>Quantity: {{bc.quantity}}</h3>
-    <h3>Before Date: {{bc.bbdate}}</h3>
-  </ion-label>
+<ion-content>
+  <ion-item *ngFor="let bc of Listings" class="user-list">
+    <ion-label>
+      <h2>Product : {{bc.brand}} {{bc.description}} | Qty: {{bc.quantity}} | BB Date: {{bc.bbdate}}</h2>
+    </ion-label>
 
   <div class="item-note" item-end>
-
     <button ion-button clear [routerLink]="['/update-bc/', bc.$key]">
-      <ion-icon name="create" style="zoom:2.0"></ion-icon>
+      <ion-icon class="updateBtn" name="create" style="zoom:2.0"></ion-icon>
     </button>
     <button ion-button clear (click)="deleteBcProduct(bc.$key)">
-      <ion-icon name="trash" style="zoom:2.0"></ion-icon>
+      <ion-icon class="deleteBtn" name="trash" style="zoom:2.0"></ion-icon>
     </button>
   </div>
-
-</ion-item>
+  </ion-item>
+</ion-content>
