--- a/Date-Control-Application/src/app/dashboard/dashboard.page.html
+++ b/Date-Control-Application/src/app/dashboard/dashboard.page.html
@@ -6,74 +6,51 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-row>
+  <ion-button type="submit" (click)="authService.SignOut()"  expand="block" color="dark">Logout Staff Member</ion-button>
+</ion-row>
+
+<ion-row>
+  <p class="red">Red Food Groups: Short Dated</p>
+  <p>---</p>
+  <p class="orange">Orange Food Groups: Short Dated</p>
+  <p>---</p>
+  <p class="green">Green Food Groups: Short Dated</p>
+</ion-row>
+
+<ion-content padding class = "background">
   <ion-grid>
-    <ion-row>
-      <h2>Hello, User</h2>
-    </ion-row>
+
+    <ion-col></ion-col>
 
     <ion-row>
-      <ion-col> 
-        <ion-button [routerLink]="['/biscuits-cakes']" expand="block" color="warning" size="large">Biscuits and Cakes</ion-button>
-      </ion-col>
+        <ion-button [routerLink]="['/dairy']" expand="block" class="dairy" color="danger" size="large">Dairy Products</ion-button>
+        <ion-button [routerLink]="['/deli-stock']" expand="block" class="deli" color="danger" size="large">Deli Stock</ion-button>
+        <ion-button [routerLink]="['/meats']" expand="block" class="meats" color="danger" size="large">Meats</ion-button>
     </ion-row>
 
-    <ion-row>
-      <ion-col> 
-        <ion-button [routerLink]="['/cereal-muesli']" expand="block" color="success" size="large">Cereal/Muesli</ion-button>
-      </ion-col>
+    <ion-col></ion-col>
+
+   <ion-row>
+        <ion-button [routerLink]="['/biscuits-cakes']" expand="block" class="bc" color="warning" size="large">Biscuits and Cakes</ion-button>
+        <ion-button [routerLink]="['/confectionery-crisps']" expand="block" class="cc" color="warning" size="large">Confectionery and Crisps</ion-button>
+        <ion-button [routerLink]="['/minerals']" expand="block" class="minerals" color="warning" size="large">Minerals</ion-button>
+        <ion-button [routerLink]="['/medicines']" expand="block" class="meds" color="warning" size="large">Medicines</ion-button>
     </ion-row>
 
-    <ion-row>
-      <ion-col> 
-        <ion-button [routerLink]="['/confectionery-crisps']" expand="block" color="warning" size="large">Confectionery and Crisps</ion-button>
-      </ion-col>
-    </ion-row>
+    <ion-col></ion-col>
 
     <ion-row>
-      <ion-col> 
-        <ion-button [routerLink]="['/dairy']" expand="block" color="danger" size="large">Dairy Products</ion-button>
-      </ion-col>
+        <ion-button [routerLink]="['/cereal-muesli']" expand="block" class="cm" color="success" size="large">Cereal/Muesli</ion-button>
+        <ion-button [routerLink]="['/frozen']" expand="block" class="frozen" color="success" size="large">Frozen Foods</ion-button>
     </ion-row>
 
-    <ion-row>
-      <ion-col> 
-        <ion-button [routerLink]="['/deli-stock']" expand="block" color="danger" size="large">Deli Stock</ion-button>
-      </ion-col>
-    </ion-row>
+    <ion-col></ion-col>
 
     <ion-row>
-      <ion-col> 
-        <ion-button [routerLink]="['/frozen']" expand="block" color="success" size="large">Frozen Foods</ion-button>
-      </ion-col>
+        <ion-button [routerLink]="['/misc-other']" expand="block" class="misc" color="tertiary" size="large">Misc/Other</ion-button>
     </ion-row>
 
-    <ion-row>
-      <ion-col> 
-        <ion-button [routerLink]="['/meats']" expand="block" color="danger" size="large">Meats</ion-button>
-      </ion-col>
-    </ion-row>
-
-    <ion-row>
-      <ion-col> 
-        <ion-button [routerLink]="['/medicines']" expand="block" color="warning" size="large">Medicines</ion-button>
-      </ion-col>
-    </ion-row>
-
-    <ion-row>
-      <ion-col> 
-        <ion-button [routerLink]="['/minerals']" expand="block" color="warning" size="large">Minerals</ion-button>
-      </ion-col>
-    </ion-row>
-
-    <ion-row>
-      <ion-col> 
-        <ion-button [routerLink]="['/misc-other']" expand="block" color="medium" size="large">Misc/Other</ion-button>
-      </ion-col>
-    </ion-row>
-    
-    <ion-row>
-      <ion-button type="submit" (click)="authService.SignOut()"  expand="block" color="dark">Logout</ion-button>
-    </ion-row>
+    <ion-col></ion-col>
   </ion-grid>
 </ion-content>
