update dairy product page done

--- a/Date-Control-Application/src/app/update-pages/update-cc/update-cc.page.html
+++ b/Date-Control-Application/src/app/update-pages/update-cc/update-cc.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Update Product Details
+      Update Confectionery/Crisps Product Details
     </ion-title>
   </ion-toolbar>
 </ion-header>
