--- a/Date-Control-Application/src/app/update-pages/update-meats/update-meats.page.html
+++ b/Date-Control-Application/src/app/update-pages/update-meats/update-meats.page.html
@@ -8,7 +8,7 @@
 
 <ion-content>
   <ion-list lines="full">
-    <form [formGroup]="updateFzForm" (ngSubmit)="updateForm()">
+    <form [formGroup]="updateMeForm" (ngSubmit)="updateForm()">
 
       <ion-item>
         <ion-label position="floating">Brand</ion-label>
@@ -48,7 +48,7 @@
 
     <ion-row>
       <ion-col>
-        <ion-button [routerLink]="['/frozen']" expand="block" color="dark">Go Back</ion-button>
+        <ion-button [routerLink]="['/meats']" expand="block" color="dark">Go Back</ion-button>
       </ion-col>
     </ion-row>
     
