update minerals details done, small fix on update meds

--- a/Date-Control-Application/src/app/update-pages/update-med/update-med.page.html
+++ b/Date-Control-Application/src/app/update-pages/update-med/update-med.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Update Meat Product Details
+      Update Medicine Product Details
     </ion-title>
   </ion-toolbar>
 </ion-header>
