--- a/Date-Control-Application/src/app/forgot-password/forgot-password.page.html
+++ b/Date-Control-Application/src/app/forgot-password/forgot-password.page.html
@@ -16,7 +16,7 @@
 
     <ion-row>
       <ion-col>
-        <ion-button type="submit" (click)="sendPasswordResetEmail(user.email)" expand="block" color="danger">Reset Password</ion-button>
+        <ion-button type="submit" (click)="sendPasswordResetEmail(email)" expand="block" color="danger">Reset Password</ion-button>
       </ion-col>
     </ion-row>
 
