--- a/Date-Control-Application/src/app/login/login.page.html
+++ b/Date-Control-Application/src/app/login/login.page.html
@@ -22,11 +22,13 @@
       </ion-col>
     </ion-row>
 
+    <!-- ***Not Working***
     <ion-row>
       <ion-col> 
         <ion-button [routerLink]="['/forgot-password']" expand="block" color="danger">Forgot Password ?</ion-button>
       </ion-col>
     </ion-row>
+    -->
 
     <ion-row>
       <ion-col> 
