--- a/Date-Control-Application/src/app/dashboard/dashboard.page.scss
+++ b/Date-Control-Application/src/app/dashboard/dashboard.page.scss
@@ -12,61 +12,61 @@ ion-content.background{
 .dairy{
     width: 30%;
     margin: auto;
-    display: block;
+    display: inline-block;
 }
 
 .deli{
     width: 30%;
     margin: auto;
-    display: block;
+    display: inline-block;
 }
 
 .meats{
     width: 30%;
     margin: auto;
-    display: block;
+    display: inline-block;
 }
 
 .bc{
-    width: 20%;
+    width: 22%;
     margin: auto;
-    display: block;
+    display: inline-block;
 }
 
 .cc{
-    width: 27%;
+    width: 29%;
     margin: auto;
-    display: block;
+    display: inline-block;
 }
 
 .minerals{
-    width: 20%;
+    width: 19%;
     margin: auto;
-    display: block;
+    display: inline-block;
 }
 
 .meds{
-    width: 18%;
+    width: 16%;
     margin: auto;
-    display: block;
+    display: inline-block;
 }
 
 .cm{
     width: 47%;
     margin: auto;
-    display: block;
+    display: inline-block;
 }
 
 .frozen{
     width: 46%;
     margin: auto;
-    display: block;
+    display: inline-block;
 }
 
 .misc{
     width: 30%;
     margin: auto;
-    display: block;
+    display: inline-block;
 }
 
 h2{
