--- a/Date-Control-Application/src/app/home/home.page.html
+++ b/Date-Control-Application/src/app/home/home.page.html
@@ -1,18 +1,16 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar class="toolbar">
     <ion-img src="..\assets\icon\AF-Date-Control.png"></ion-img>
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="auth-form">
+<ion-content>
   <ion-grid>
-    <ion-row>
       <ion-col class="ion-align-self-center">
         <span class="already">Welcome, Please Sign In or Register as New Staff Member</span>
-        <ion-button [routerLink]="['/login']" expand="block" color="tertiary">Staff Sign In</ion-button>
+        <ion-button [routerLink]="['/login']" shape ="round" expand="block" color="success">Staff Sign In</ion-button>
         <span class="divider line one-line">or</span>
-        <ion-button [routerLink]="['/registration']" expand="block" color="dark">Register As New Staff Member</ion-button>
+        <ion-button [routerLink]="['/registration']" shape ="round" expand="block" color="primary">Register As New Staff Member</ion-button>
       </ion-col>
-    </ion-row>
   </ion-grid>
 </ion-content>
