--- a/Date-Control-Application/src/app/cereal-muesli/cereal-muesli.page.html
+++ b/Date-Control-Application/src/app/cereal-muesli/cereal-muesli.page.html
@@ -1,7 +1,9 @@
 <ion-header>
   <ion-toolbar>
     <ion-row>
-      <ion-button [routerLink]="['/dashboard']" expand="block" color="dark">Go Back</ion-button>
+      <ion-button [routerLink]="['/dashboard']" expand="block" color="dark">
+        <ion-icon name="arrow-back-circle-outline"></ion-icon>
+      </ion-button>
       <ion-img src="..\assets\icon\AF-Date-Control.png"></ion-img>
     </ion-row>
   </ion-toolbar>
