--- a/Date-Control-Application/src/app/minerals/minerals.page.html
+++ b/Date-Control-Application/src/app/minerals/minerals.page.html
@@ -1,7 +1,9 @@
 <ion-header>
   <ion-toolbar>
     <ion-row>
-      <ion-button [routerLink]="['/dashboard']" expand="block" color="dark">Go Back</ion-button>
+      <ion-button [routerLink]="['/dashboard']" expand="block" color="dark">
+        <ion-icon name="arrow-back-circle-outline"></ion-icon>
+      </ion-button>
       <ion-img src="..\assets\icon\AF-Date-Control.png"></ion-img>
     </ion-row>
   </ion-toolbar>
@@ -44,7 +46,7 @@
 <ion-content>
   <ion-item *ngFor="let min of Listings" class="user-list">
     <ion-label>
-      <h2>Product : {{min}.brand}} {{min.description}} | Qty: {{min.quantity}} | BB Date: {{min.bbdate}}</h2>
+      <h2>Product : {{min.brand}} {{min.description}} | Qty: {{min.quantity}} | BB Date: {{min.bbdate}}</h2>
     </ion-label>
 
   <div class="item-note" item-end>
