--- a/Date-Control-Application/src/app/medicines/medicines.page.html
+++ b/Date-Control-Application/src/app/medicines/medicines.page.html
@@ -38,7 +38,9 @@
       </ion-item>
 
       <ion-row>
-          <ion-button type="submit" color="success" shape="full" expand="block">Add Product</ion-button>
+          <ion-button type="submit" color="success" shape="round" expand="block">
+            <ion-icon name="add-outline"></ion-icon>
+          </ion-button>
       </ion-row>
     </form>
   </ion-list>
