--- a/Date-Control-Application/src/app/biscuits-cakes/biscuits-cakes.page.html
+++ b/Date-Control-Application/src/app/biscuits-cakes/biscuits-cakes.page.html
@@ -46,7 +46,7 @@
   </ion-list>
 
 <ion-content>
-  <ion-item *ngFor="let bc of Listings" class="user-list">
+  <ion-item *ngFor="let bc of Listings" class="product-list">
     <ion-label>
       <h2>Product : {{bc.brand}} {{bc.description}} | Qty: {{bc.quantity}} | BB Date: {{bc.bbdate}}</h2>
     </ion-label>
