--- a/Date-Control-Application/src/app/cereal-muesli/cereal-muesli.page.html
+++ b/Date-Control-Application/src/app/cereal-muesli/cereal-muesli.page.html
@@ -46,7 +46,7 @@
   </ion-list>
 
 <ion-content>
-  <ion-item *ngFor="let cm of Listings" class="user-list">
+  <ion-item *ngFor="let cm of Listings" class="product-list">
     <ion-label>
       <h2>Product : {{cm.brand}} {{cm.description}} | Qty: {{cm.quantity}} | BB Date: {{cm.bbdate}}</h2>
     </ion-label>
