--- a/Date-Control-Application/src/app/confectionery-crisps/confectionery-crisps.page.html
+++ b/Date-Control-Application/src/app/confectionery-crisps/confectionery-crisps.page.html
@@ -46,7 +46,7 @@
   </ion-list>
 
 <ion-content>
-  <ion-item *ngFor="let cc of Listings" class="user-list">
+  <ion-item *ngFor="let cc of Listings" class="product-list">
     <ion-label>
       <h2>Product : {{cc.brand}} {{cc.description}} | Qty: {{cc.quantity}} | BB Date: {{cc.bbdate}}</h2>
     </ion-label>
