--- a/Date-Control-Application/src/app/dairy/dairy.page.html
+++ b/Date-Control-Application/src/app/dairy/dairy.page.html
@@ -46,7 +46,7 @@
   </ion-list>
 
 <ion-content>
-  <ion-item *ngFor="let dp of Listings" class="user-list">
+  <ion-item *ngFor="let dp of Listings" class="product-list">
     <ion-label>
       <h2>Product : {{dp.brand}} {{dp.description}} | Qty: {{dp.quantity}} | BB Date: {{dp.bbdate}}</h2>
     </ion-label>
