--- a/Date-Control-Application/src/app/deli-stock/deli-stock.page.html
+++ b/Date-Control-Application/src/app/deli-stock/deli-stock.page.html
@@ -51,7 +51,7 @@
   </ion-list>
 
 <ion-content>
-  <ion-item *ngFor="let ds of Listings" class="user-list">
+  <ion-item *ngFor="let ds of Listings" class="product-list">
     <ion-label>
       <h2>Product : {{ds.brand}} {{ds.description}} | BC: {{ds.batchcode}} | Qty: {{ds.quantity}} | BB Date: {{ds.bbdate}}</h2>
     </ion-label>
