--- a/Date-Control-Application/src/app/frozen/frozen.page.html
+++ b/Date-Control-Application/src/app/frozen/frozen.page.html
@@ -46,7 +46,7 @@
   </ion-list>
 
 <ion-content>
-  <ion-item *ngFor="let fz of Listings" class="user-list">
+  <ion-item *ngFor="let fz of Listings" class="product-list">
     <ion-label>
       <h2>Product : {{fz.brand}} {{fz.description}} | Qty: {{fz.quantity}} | BB Date: {{fz.bbdate}}</h2>
     </ion-label>
