--- a/Date-Control-Application/src/app/meats/meats.page.html
+++ b/Date-Control-Application/src/app/meats/meats.page.html
@@ -46,7 +46,7 @@
   </ion-list>
 
 <ion-content>
-  <ion-item *ngFor="let me of Listings" class="user-list">
+  <ion-item *ngFor="let me of Listings" class="product-list">
     <ion-label>
       <h2>Product : {{me.brand}} {{me.description}} | Qty: {{me.quantity}} | BB Date: {{me.bbdate}}</h2>
     </ion-label>
