--- a/Date-Control-Application/src/app/medicines/medicines.page.html
+++ b/Date-Control-Application/src/app/medicines/medicines.page.html
@@ -46,7 +46,7 @@
   </ion-list>
 
 <ion-content>
-  <ion-item *ngFor="let meds of Listings" class="user-list">
+  <ion-item *ngFor="let meds of Listings" class="product-list">
     <ion-label>
       <h2>Product : {{meds.brand}} {{meds.description}} | Qty: {{meds.quantity}} | BB Date: {{meds.bbdate}}</h2>
     </ion-label>
