--- a/Date-Control-Application/src/app/minerals/minerals.page.html
+++ b/Date-Control-Application/src/app/minerals/minerals.page.html
@@ -46,7 +46,7 @@
   </ion-list>
 
 <ion-content>
-  <ion-item *ngFor="let min of Listings" class="user-list">
+  <ion-item *ngFor="let min of Listings" class="product-list">
     <ion-label>
       <h2>Product : {{min.brand}} {{min.description}} | Qty: {{min.quantity}} | BB Date: {{min.bbdate}}</h2>
     </ion-label>
