--- a/Date-Control-Application/src/app/misc-other/misc-other.page.html
+++ b/Date-Control-Application/src/app/misc-other/misc-other.page.html
@@ -46,7 +46,7 @@
   </ion-list>
 
 <ion-content>
-  <ion-item *ngFor="let misc of Listings" class="user-list">
+  <ion-item *ngFor="let misc of Listings" class="product-list">
     <ion-label>
       <h2>Product : {{misc.brand}} {{misc.description}} | Qty: {{misc.quantity}} | BB Date: {{misc.bbdate}}</h2>
     </ion-label>
